added process view model bind with confirm enable bind

--- a/ShrinkMeister/Resources/Base.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/Base.lproj/Localizable.strings
@@ -7,3 +7,6 @@
 */
 
 "NavigationTitle" = "ShrinkMeister";
+"ProcessLevelLargeButtonTitle" = "Large";
+"ProcessLevelMediumButtonTitle" = "Medium";
+"ProcessLevelSmallButtonTitle" = "Small";
