confirm button localized code structure changed, confirm appearance moved to based process view

--- a/ShrinkMeister/Resources/en.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/en.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 "ProcessLevelLargeButtonTitle" = "Large";
 "ProcessLevelMediumButtonTitle" = "Medium";
 "ProcessLevelSmallButtonTitle" = "Small";
+"ProcessViewConfirmButtonTitle" = "OK";
