--- a/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 "ProcessLevelLargeButtonTitle" = "大型";
 "ProcessLevelMediumButtonTitle" = "中型";
 "ProcessLevelSmallButtonTitle" = "小型";
+"ProcessViewConfirmButtonTitle" = "确定";
