--- a/ShrinkMeister/Resources/Base.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/Base.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "ProcessLevelLargeButtonTitle" = "Large";
 "ProcessLevelMediumButtonTitle" = "Medium";
 "ProcessLevelSmallButtonTitle" = "Small";
+"ProcessViewConfirmButtonTitle" = "OK";
