fixed custom process view width/height issue optimized UI

--- a/ShrinkMeister/Resources/Base.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/Base.lproj/Localizable.strings
@@ -11,3 +11,4 @@
 "ProcessLevelMediumButtonTitle" = "Medium";
 "ProcessLevelSmallButtonTitle" = "Small";
 "ProcessViewConfirmButtonTitle" = "OK";
+"ProcessViewExportButtonTitle" = "Export to System Album";
