--- a/ShrinkMeister/Resources/en.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/en.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "ProcessLevelMediumButtonTitle" = "Medium";
 "ProcessLevelSmallButtonTitle" = "Small";
 "ProcessViewConfirmButtonTitle" = "OK";
+"ProcessViewExportButtonTitle" = "Export to System Album";
