--- a/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "ProcessLevelMediumButtonTitle" = "中型";
 "ProcessLevelSmallButtonTitle" = "小型";
 "ProcessViewConfirmButtonTitle" = "确定";
+"ProcessViewExportButtonTitle" = "导出系统相册";
