added MBProgress Hud changed process to background task and show progress

--- a/ShrinkMeister/Resources/en.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/en.lproj/Localizable.strings
@@ -11,3 +11,4 @@
 "ProcessLevelSmallButtonTitle" = "Small";
 "ProcessViewConfirmButtonTitle" = "OK";
 "ProcessViewExportButtonTitle" = "Export to System Album";
+"MainViewProgressTitle" = "Processing";
