--- a/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
@@ -10,4 +10,5 @@
 "ProcessLevelMediumButtonTitle" = "中型";
 "ProcessLevelSmallButtonTitle" = "小型";
 "ProcessViewConfirmButtonTitle" = "确定";
-"ProcessViewExportButtonTitle" = "导出系统相册";
+"ProcessViewExportButtonTitle" = "导出到系统相册";
+"MainViewProgressTitle" = "正在处理中";
