--- a/ShrinkMeister/Resources/Base.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/Base.lproj/Localizable.strings
@@ -12,3 +12,4 @@
 "ProcessLevelSmallButtonTitle" = "Small";
 "ProcessViewConfirmButtonTitle" = "OK";
 "ProcessViewExportButtonTitle" = "Export to System Album";
+"MainViewProgressTitle" = "Processing";
