--- a/ShrinkMeister/Resources/Base.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/Base.lproj/Localizable.strings
@@ -13,3 +13,6 @@
 "ProcessViewConfirmButtonTitle" = "OK";
 "ProcessViewExportButtonTitle" = "Export to System Album";
 "MainViewProgressTitle" = "Processing";
+"ExportAlertControllerTitle" = "Succeeded";
+"ExportAlertControllerMessage" = "Saved to System Album";
+"ExportAlertControllerConfirm" = "OK";
