--- a/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/zh-Hans.lproj/Localizable.strings
@@ -12,3 +12,6 @@
 "ProcessViewConfirmButtonTitle" = "确定";
 "ProcessViewExportButtonTitle" = "导出到系统相册";
 "MainViewProgressTitle" = "正在处理中";
+"ExportAlertControllerTitle" = "成功";
+"ExportAlertControllerMessage" = "照片已存入系统相册";
+"ExportAlertControllerConfirm" = "确定";
