now if no image loaded on startup , choose picture show directly

--- a/ShrinkMeister/Resources/Base.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/Base.lproj/Localizable.strings
@@ -16,3 +16,4 @@
 "ExportAlertControllerTitle" = "Succeeded";
 "ExportAlertControllerMessage" = "Saved to System Album";
 "ExportAlertControllerConfirm" = "OK";
+"ImagePickerCameraTitle" = "Camera";
