--- a/ShrinkMeister/Resources/en.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/en.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "ExportAlertControllerTitle" = "Succeeded";
 "ExportAlertControllerMessage" = "Saved to System Album";
 "ExportAlertControllerConfirm" = "OK";
+"ImagePickerCameraTitle" = "Camera";
