added place holder image for cn/en reduce dest size by 30 to keep space for email export enlarge

--- a/ShrinkMeister/Resources/en.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/en.lproj/Localizable.strings
@@ -5,6 +5,7 @@
   Created by Jackie Zhang on 16/8/6.
   Copyright © 2016年 Jackie Zhang. All rights reserved.
 */
+"PlaceholderImageName" = "shrinkMeiterInstruct_en";
 "NavigationTitle" = "ShrinkMeister";
 "ProcessLevelLargeButtonTitle" = "Large";
 "ProcessLevelMediumButtonTitle" = "Medium";
