--- a/ShrinkMeister/Resources/Base.lproj/Localizable.strings
+++ b/ShrinkMeister/Resources/Base.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright © 2016年 Jackie Zhang. All rights reserved.
 */
 
+"PlaceholderImageName" = "shrinkMeiterInstruct_en";
 "NavigationTitle" = "ShrinkMeister";
 "ProcessLevelLargeButtonTitle" = "Large";
 "ProcessLevelMediumButtonTitle" = "Medium";
